# NitroServiceBot

./: README.md  main.py  pyproject.toml  warn.json
bot/: Admin.py  Core.py  Manage.py
