[tool.poetry]
name = "repl_python3_NitroServiceBot"
version = "0.1.0"
description = ""
authors = ["hminkoo10 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.7.3"
typing-extensions = "^4.2.0"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
